@@ -1,3 +1,11 @@
+Fri Dec 13 08:15:31 2013  Aman Gupta <ruby@tmm1.net>
+
+	* class.c (include_modules_at): use RCLASS_M_TBL_WRAPPER for
+	  equality checks. this avoids an unnecessary deference inside a tight
+	  loop, fixing a performance regression from r43973.
+	* object.c (rb_obj_is_kind_of): ditto.
+	* object.c (rb_class_inherited_p): ditto.
+
 Wed Dec 13 02:00:00 2013  Kenta Murata  <mrkn@mrkn.jp>
 
 	* ext/bigdecimal/bigdecimal.c (VpSetPTR): fix for limitation of the resulting
